@@ -5,6 +5,7 @@ opensesame (2.9.5~pre2-ubuntu1) utopic; urgency=medium
     - Remove all references to deprecated keyboard.to_chr()
     - Remove empty response options in form_multiple_choice
     - Also rename and delete files in fallback pool folder
+    - Don't crash on invalid fixdot style in sketchpad canvas
   * Improvements
     - Explicitly notify of variable sequence preparation time
     - Add form template
